--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
     },
     "minimum-stability": "dev",
     "require": {
+        "php": ">=5.5.9",
         "illuminate:support" : "~5"
     }
 }
